...
    <string name="date_added_colon">Date Added:</string>
    <string name="description_colon">Description:</string>
    <string name="delete">Delete</string>
    <string name="delete_problem">Delete Problem</string>
    <string name="delete_record">Delete Record</string>
    <string name="view_records">View Records</string>
    <string name="save_problem">Save Problem</string>
    <string name="edit_condition">Edit Problem</string>
    <string name="edit_record">Edit Record</string>
    <string name="condition_name">Problem Name</string>
    <string name="condition">Problem</string>
    <string name="description">Description</string>
    <string name="patients">Patients</string>
    <string name="patient_s_problems">Patient\'s Problems</string>
    <string name="patient_name_colon">Patient Name:</string>
    <string name="search_problems_or_records">Search Problems or Records</string>
    <string name="contact_information">Contact Information</string>
    <string name="home">Home</string>
...
