<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/condition_main_label"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/condition_colon"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/condition_view_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/condition_name_colon"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/condition_main_label"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/condition_view_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="Name"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/condition_view_name_label"
        app:layout_constraintTop_toTopOf="@+id/condition_view_name_label" />

    <TextView
        android:id="@+id/condition_view_date_label"
        android:layout_width="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_height="0dp"
        android:text="@string/date_added_colon"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/condition_view_name_label"
        app:layout_constraintTop_toBottomOf="@+id/condition_view_name" />

    <TextView
        android:id="@+id/condition_view_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="Date"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/condition_view_date_label"
        app:layout_constraintTop_toTopOf="@+id/condition_view_date_label" />

    <TextView
        android:id="@+id/condition_view_description_label"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/description_colon"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/condition_view_date_label"
        app:layout_constraintTop_toBottomOf="@+id/condition_view_date" />

    <TextView
        android:id="@+id/condition_view_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="Description"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/condition_view_description_label"
        app:layout_constraintTop_toTopOf="@+id/condition_view_description_label" />

    <ListView
        android:id="@+id/record_list_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/condition_view_description"
        app:layout_constraintBottom_toTopOf="@+id/edit_condition"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_new_record_button"
        android:layout_width="wrap_content"
        android:tint="@android:color/white"
        android:src="@drawable/ic_add_white_24dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:layout_constraintBottom_toBottomOf="@id/record_list_view"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/edit_condition"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/edit_condition"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>